--- a/WebdevFinal/Gemfile
+++ b/WebdevFinal/Gemfile
@@ -25,6 +25,9 @@ gem 'jquery-rails'
 # To use ActiveModel has_secure_password
 gem 'bcrypt-ruby', '~> 3.0.0'
 
+#actionmailer
+# gem "actionmailer", "~> 3.2.13"
+
 # To use Jbuilder templates for JSON
 # gem 'jbuilder'
 
